--- a/services/product/package.json
+++ b/services/product/package.json
@@ -4,7 +4,7 @@
   "description": "Products service",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Dinh Nguyen",
   "license": "ISC",
@@ -13,6 +13,49 @@
     "koa": "^2.13.0",
     "koa-better-router": "^2.1.1",
     "koa-body": "^4.2.0",
+    "koa-logger": "^3.2.1",
     "mongoose": "^5.9.25"
+  },
+  "devDependencies": {
+    "jest": "^26.1.0",
+    "mockingoose": "^2.13.2",
+    "sinon": "^7.5.0",
+    "sinon-mongoose": "^2.3.0",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "json",
+      "ts",
+      "tsx"
+    ],
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{ts,js}",
+      "!**/node_modules/**",
+      "!**/build/**",
+      "!**/coverage/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    },
+    "coverageReporters": [
+      "text",
+      "text-summary"
+    ],
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(js|ts)x?$",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/build/",
+      "/coverage/"
+    ]
   }
 }
