--- a/services/product/package.json
+++ b/services/product/package.json
@@ -4,7 +4,8 @@
   "description": "Products service",
   "main": "server.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint"
   },
   "author": "Dinh Nguyen",
   "license": "ISC",
@@ -17,6 +18,12 @@
     "mongoose": "^5.9.25"
   },
   "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^26.1.0",
     "mockingoose": "^2.13.2",
     "sinon": "^7.5.0",
