--- a/services/query/package.json
+++ b/services/query/package.json
@@ -13,8 +13,9 @@
     "koa": "^2.13.0",
     "koa-better-router": "^2.1.1",
     "koa-body": "^4.2.0",
-    "koa-logger": "^3.2.1",
-    "mongoose": "^5.9.25"
+    "koa-logger-middleware": "^1.0.0",
+    "mongoose": "^5.9.25",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
